add the feature of global cache for execution layer

--- a/crates/storage/storage-api/Cargo.toml
+++ b/crates/storage/storage-api/Cargo.toml
@@ -34,6 +34,12 @@ alloy-rpc-types-engine.workspace = true
 
 auto_impl.workspace = true
 
+# metis-sdk
+moka.workspace = true
+tracing.workspace = true
+
+log = "0.4.27"
+
 [features]
 default = ["std"]
 std = [
