--- a/Cargo.toml
+++ b/Cargo.toml
@@ -694,7 +694,7 @@ walkdir = "2.3.3"
 vergen-git2 = "1.0.5"
 
 # metis-sdk
-moka = "0.12"
+moka = { version = "0.12.10", features = ["sync"] }
 
 # [patch.crates-io]
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "cfb13aa" }
